# AgenticAI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  deploy.yml
app/: __init__.py  generic_constants.py  main.py
app/common/: config.py
app/models/: __init__.py  chat_completion.py
app/routes/: __init__.py  all_routes.py  chat_completion_routes.py  health_routes.py  version_routes.py
app/services/: openai_service.py
tests/: .test.env
tests/routes/: test_health_routes.py  test_version_routes.py
